# rust-webcomponent-test

./: .gitignore  Cargo.toml  README.md
example-page/: Cargo.toml
example-page/src/: component.rs  lib.rs
src/: main.rs
