[package]
name = "rust-import-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { path = "../yew/packages/yew", features = ["csr"] }
wasm-bindgen = { path = "../wasm-bindgen" }
# XXX need this for wasm-bindgen or I get compile errors
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures" }
