[package]
name = "example-page"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
custom-elements = "0.2.1"
wasm-bindgen = "0.2"
yew = { version = "0.21", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "DocumentFragment"
]
